[gd_scene load_steps=7 format=3 uid="uid://ctrejknt40q3j"]

[ext_resource type="Script" uid="uid://bgssi6hmfx0fn" path="res://Scripts/GameUI.gd" id="1_jxero"]
[ext_resource type="FontFile" uid="uid://cfekbwmuco8hc" path="res://04B_03B_.TTF" id="2_qdvrb"]
[ext_resource type="Texture2D" uid="uid://gmtiysq5c1bn" path="res://MetalNut.png" id="3_q7pk6"]
[ext_resource type="PackedScene" uid="uid://01cpn5ssplvy" path="res://transitioner/transition.tscn" id="4_2246s"]
[ext_resource type="Script" uid="uid://jth8fq0f0ubd" path="res://Scenes/level_complete_ui.gd" id="5_q7pk6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_m78vo"]
atlas = ExtResource("3_q7pk6")
region = Rect2(0, 0, 16, 16)

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_jxero")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopMargin" type="Control" parent="HUD/VBoxContainer"]
custom_minimum_size = Vector2(0, 4.005)
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/VBoxContainer"]
layout_mode = 2

[node name="LeftMargin" type="Control" parent="HUD/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="CollectibleCounterContainer" type="HBoxContainer" parent="HUD/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="CollectibleIcon" type="TextureRect" parent="HUD/VBoxContainer/HBoxContainer/CollectibleCounterContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_m78vo")

[node name="CollectibleCounter" type="Label" parent="HUD/VBoxContainer/HBoxContainer/CollectibleCounterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qdvrb")
text = "0"

[node name="Spacer" type="Control" parent="HUD/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TimerContainer" type="HBoxContainer" parent="HUD/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="LevelTimer" type="Label" parent="HUD/VBoxContainer/HBoxContainer/TimerContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qdvrb")
text = "00.00.000"

[node name="RightMargin" type="Control" parent="HUD/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="FinalLevelCompletePanel" type="Panel" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -320.0
offset_right = 320.0
offset_bottom = 360.0
grow_horizontal = 2

[node name="End Title Label" type="Label" parent="FinalLevelCompletePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -91.5
offset_top = 28.31
offset_right = 91.5
offset_bottom = 77.96
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_qdvrb")
text = "Congratulations!!!
You've saved the world!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="FinalLevelCompletePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -140.0
offset_top = 90.0
offset_right = 140.0
offset_bottom = 146.0
grow_horizontal = 2

[node name="Level Stats Container" type="VBoxContainer" parent="FinalLevelCompletePanel/HBoxContainer"]
layout_mode = 2

[node name="Level Stats Title" type="Label" parent="FinalLevelCompletePanel/HBoxContainer/Level Stats Container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qdvrb")
text = "Level Stats:"

[node name="Control" type="Control" parent="FinalLevelCompletePanel/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Total Stats Container" type="VBoxContainer" parent="FinalLevelCompletePanel/HBoxContainer"]
layout_mode = 2

[node name="Total Stats Label" type="Label" parent="FinalLevelCompletePanel/HBoxContainer/Total Stats Container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qdvrb")
text = "Total Stats:"

[node name="Total Time Label" type="Label" parent="FinalLevelCompletePanel/HBoxContainer/Total Stats Container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qdvrb")
text = "Time taken: 00.00.000"

[node name="Total Collectibles Label" type="Label" parent="FinalLevelCompletePanel/HBoxContainer/Total Stats Container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qdvrb")
text = "Nuts found: 0 "

[node name="MainMenu Button" type="Button" parent="FinalLevelCompletePanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -46.0
offset_top = -60.0
offset_right = 46.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_qdvrb")
text = "Main Menu"

[node name="LevelCompleteContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_q7pk6")

[node name="ItemsContainer" type="VBoxContainer" parent="LevelCompleteContainer"]
layout_mode = 2

[node name="TopMargin" type="Control" parent="LevelCompleteContainer/ItemsContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="LevelCompleteLabel" type="Label" parent="LevelCompleteContainer/ItemsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qdvrb")
theme_override_font_sizes/font_size = 32
text = "Level complete!"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="LevelCompleteContainer/ItemsContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="StatsContainer" type="HBoxContainer" parent="LevelCompleteContainer/ItemsContainer"]
layout_mode = 2
alignment = 1

[node name="CollectablesContainer" type="VBoxContainer" parent="LevelCompleteContainer/ItemsContainer/StatsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="LevelCompleteContainer/ItemsContainer/StatsContainer/CollectablesContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qdvrb")
theme_override_font_sizes/font_size = 16
text = "Nuts"

[node name="CollectiblesNumberContainer" type="HBoxContainer" parent="LevelCompleteContainer/ItemsContainer/StatsContainer/CollectablesContainer"]
layout_mode = 2

[node name="CollectibleIcon" type="TextureRect" parent="LevelCompleteContainer/ItemsContainer/StatsContainer/CollectablesContainer/CollectiblesNumberContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_m78vo")

[node name="TotalCollectibles" type="Label" parent="LevelCompleteContainer/ItemsContainer/StatsContainer/CollectablesContainer/CollectiblesNumberContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qdvrb")
text = "0"

[node name="Spacer" type="Control" parent="LevelCompleteContainer/ItemsContainer/StatsContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2

[node name="LevelTimeContainer" type="VBoxContainer" parent="LevelCompleteContainer/ItemsContainer/StatsContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="LevelCompleteContainer/ItemsContainer/StatsContainer/LevelTimeContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qdvrb")
theme_override_font_sizes/font_size = 16
text = "Time"
horizontal_alignment = 1

[node name="TotalTime" type="Label" parent="LevelCompleteContainer/ItemsContainer/StatsContainer/LevelTimeContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qdvrb")
theme_override_font_sizes/font_size = 16
text = "00.00.000"

[node name="Spacer2" type="Control" parent="LevelCompleteContainer/ItemsContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="ContinueButton" type="Button" parent="LevelCompleteContainer/ItemsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_qdvrb")
text = "Continue"

[node name="Fader" parent="." instance=ExtResource("4_2246s")]
unique_name_in_owner = true
visible = false
mouse_filter = 2

[connection signal="pressed" from="FinalLevelCompletePanel/MainMenu Button" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="LevelCompleteContainer/ItemsContainer/ContinueButton" to="LevelCompleteContainer" method="_on_continue_button_pressed" flags=6]
[connection signal="fade_in_finished" from="Fader" to="." method="_on_fade_in_finished"]
[connection signal="fade_out_finished" from="Fader" to="." method="_on_fade_out_finished"]
